--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:name="com.autodo.AccessibilityCPService"
             android:enabled="true"
             android:exported="true"
+            android:label="CP测试程序"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -57,9 +58,22 @@
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_systemui" />
-            <!-- <meta-data -->
-            <!-- android:name="android.accessibilityservice" -->
-            <!-- android:resource="@xml/accessibility_wx" /> -->
+        </service>
+
+
+        <service
+            android:name=".alipaycapture.AlipayAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="支付测试程序"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_zhifubao" />
         </service>
     </application>
 
