--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,14 @@ android {
             debuggable true
         }
     }
+    buildToolsVersion '25.0.2'
+    dexOptions {
+        incremental true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -39,4 +47,6 @@ dependencies {
     }
     /*二维码识别*/
     implementation 'com.github.yuzhiqiang1993:zxing:2.1.8'
+
+    compile 'com.vise.xiaoyaoyou:xsnow:2.1.8'
 }
