--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,20 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_jiakao" />
         </service>
+        <service
+            android:name=".daka.AccessibilityDKService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="自动打下班卡"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
 
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_jiakao" />
+        </service>
     </application>
 
 </manifest>
